--- a/ccnga4.ipynb
+++ b/ccnga4.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b92575a1",
+   "id": "6bf0f1fa",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-09-14T20:04:46.252903Z",
-     "iopub.status.busy": "2022-09-14T20:04:46.252219Z",
-     "iopub.status.idle": "2022-09-14T20:04:51.122561Z",
-     "shell.execute_reply": "2022-09-14T20:04:51.121332Z"
+     "iopub.execute_input": "2022-09-14T20:22:23.120521Z",
+     "iopub.status.busy": "2022-09-14T20:22:23.119911Z",
+     "iopub.status.idle": "2022-09-14T20:22:27.673538Z",
+     "shell.execute_reply": "2022-09-14T20:22:27.672409Z"
     },
     "papermill": {
-     "duration": 4.879198,
-     "end_time": "2022-09-14T20:04:51.125285",
+     "duration": 4.563685,
+     "end_time": "2022-09-14T20:22:27.676274",
      "exception": false,
-     "start_time": "2022-09-14T20:04:46.246087",
+     "start_time": "2022-09-14T20:22:23.112589",
      "status": "completed"
     },
     "tags": []
@@ -269,19 +269,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "50cc74ef",
+   "id": "f7828708",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T20:04:51.134490Z",
-     "iopub.status.busy": "2022-09-14T20:04:51.134035Z",
-     "iopub.status.idle": "2022-09-14T20:04:58.543324Z",
-     "shell.execute_reply": "2022-09-14T20:04:58.542032Z"
+     "iopub.execute_input": "2022-09-14T20:22:27.685114Z",
+     "iopub.status.busy": "2022-09-14T20:22:27.684730Z",
+     "iopub.status.idle": "2022-09-14T20:22:34.858641Z",
+     "shell.execute_reply": "2022-09-14T20:22:34.857375Z"
     },
     "papermill": {
-     "duration": 7.416732,
-     "end_time": "2022-09-14T20:04:58.545902",
+     "duration": 7.181064,
+     "end_time": "2022-09-14T20:22:34.861098",
      "exception": false,
-     "start_time": "2022-09-14T20:04:51.129170",
+     "start_time": "2022-09-14T20:22:27.680034",
      "status": "completed"
     },
     "tags": []
@@ -585,19 +585,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fd6005d0",
+   "id": "43aefd86",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T20:04:58.555598Z",
-     "iopub.status.busy": "2022-09-14T20:04:58.555155Z",
-     "iopub.status.idle": "2022-09-14T20:04:58.562232Z",
-     "shell.execute_reply": "2022-09-14T20:04:58.561094Z"
+     "iopub.execute_input": "2022-09-14T20:22:34.871565Z",
+     "iopub.status.busy": "2022-09-14T20:22:34.870527Z",
+     "iopub.status.idle": "2022-09-14T20:22:34.876736Z",
+     "shell.execute_reply": "2022-09-14T20:22:34.875771Z"
     },
     "papermill": {
-     "duration": 0.014638,
-     "end_time": "2022-09-14T20:04:58.564629",
+     "duration": 0.013772,
+     "end_time": "2022-09-14T20:22:34.878982",
      "exception": false,
-     "start_time": "2022-09-14T20:04:58.549991",
+     "start_time": "2022-09-14T20:22:34.865210",
      "status": "completed"
     },
     "tags": []
@@ -621,19 +621,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "24aab726",
+   "id": "6f7b4365",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T20:04:58.575069Z",
-     "iopub.status.busy": "2022-09-14T20:04:58.574110Z",
-     "iopub.status.idle": "2022-09-14T20:04:58.580125Z",
-     "shell.execute_reply": "2022-09-14T20:04:58.578967Z"
+     "iopub.execute_input": "2022-09-14T20:22:34.889103Z",
+     "iopub.status.busy": "2022-09-14T20:22:34.888723Z",
+     "iopub.status.idle": "2022-09-14T20:22:34.894270Z",
+     "shell.execute_reply": "2022-09-14T20:22:34.893110Z"
     },
     "papermill": {
-     "duration": 0.013907,
-     "end_time": "2022-09-14T20:04:58.582698",
+     "duration": 0.013572,
+     "end_time": "2022-09-14T20:22:34.896761",
      "exception": false,
-     "start_time": "2022-09-14T20:04:58.568791",
+     "start_time": "2022-09-14T20:22:34.883189",
      "status": "completed"
     },
     "tags": []
@@ -649,19 +649,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "efcebe87",
+   "id": "9f799641",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T20:04:58.592780Z",
-     "iopub.status.busy": "2022-09-14T20:04:58.592392Z",
-     "iopub.status.idle": "2022-09-14T20:04:58.600846Z",
-     "shell.execute_reply": "2022-09-14T20:04:58.599945Z"
+     "iopub.execute_input": "2022-09-14T20:22:34.908760Z",
+     "iopub.status.busy": "2022-09-14T20:22:34.906477Z",
+     "iopub.status.idle": "2022-09-14T20:22:34.916846Z",
+     "shell.execute_reply": "2022-09-14T20:22:34.915638Z"
     },
     "papermill": {
-     "duration": 0.016226,
-     "end_time": "2022-09-14T20:04:58.603120",
+     "duration": 0.018138,
+     "end_time": "2022-09-14T20:22:34.919141",
      "exception": false,
-     "start_time": "2022-09-14T20:04:58.586894",
+     "start_time": "2022-09-14T20:22:34.901003",
      "status": "completed"
     },
     "tags": []
@@ -699,19 +699,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5ca4c6a9",
+   "id": "df800036",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T20:04:58.613497Z",
-     "iopub.status.busy": "2022-09-14T20:04:58.613093Z",
-     "iopub.status.idle": "2022-09-14T20:04:58.619117Z",
-     "shell.execute_reply": "2022-09-14T20:04:58.617914Z"
+     "iopub.execute_input": "2022-09-14T20:22:34.929059Z",
+     "iopub.status.busy": "2022-09-14T20:22:34.928661Z",
+     "iopub.status.idle": "2022-09-14T20:22:34.934018Z",
+     "shell.execute_reply": "2022-09-14T20:22:34.933188Z"
     },
     "papermill": {
-     "duration": 0.014102,
-     "end_time": "2022-09-14T20:04:58.621532",
+     "duration": 0.012667,
+     "end_time": "2022-09-14T20:22:34.936031",
      "exception": false,
-     "start_time": "2022-09-14T20:04:58.607430",
+     "start_time": "2022-09-14T20:22:34.923364",
      "status": "completed"
     },
     "tags": []
@@ -727,19 +727,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "70d26a6d",
+   "id": "fc4fd1c8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T20:04:58.631918Z",
-     "iopub.status.busy": "2022-09-14T20:04:58.631533Z",
-     "iopub.status.idle": "2022-09-14T20:04:59.030624Z",
-     "shell.execute_reply": "2022-09-14T20:04:59.029221Z"
+     "iopub.execute_input": "2022-09-14T20:22:34.946469Z",
+     "iopub.status.busy": "2022-09-14T20:22:34.945804Z",
+     "iopub.status.idle": "2022-09-14T20:22:35.338978Z",
+     "shell.execute_reply": "2022-09-14T20:22:35.337786Z"
     },
     "papermill": {
-     "duration": 0.407732,
-     "end_time": "2022-09-14T20:04:59.033598",
+     "duration": 0.401512,
+     "end_time": "2022-09-14T20:22:35.341786",
      "exception": false,
-     "start_time": "2022-09-14T20:04:58.625866",
+     "start_time": "2022-09-14T20:22:34.940274",
      "status": "completed"
     },
     "tags": []
@@ -754,19 +754,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "db2f5dc2",
+   "id": "8153ce2d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T20:04:59.043822Z",
-     "iopub.status.busy": "2022-09-14T20:04:59.043438Z",
-     "iopub.status.idle": "2022-09-14T20:07:55.742121Z",
-     "shell.execute_reply": "2022-09-14T20:07:55.740858Z"
+     "iopub.execute_input": "2022-09-14T20:22:35.351820Z",
+     "iopub.status.busy": "2022-09-14T20:22:35.351402Z",
+     "iopub.status.idle": "2022-09-14T20:25:33.299727Z",
+     "shell.execute_reply": "2022-09-14T20:25:33.298406Z"
     },
     "papermill": {
-     "duration": 176.710139,
-     "end_time": "2022-09-14T20:07:55.747908",
+     "duration": 177.960746,
+     "end_time": "2022-09-14T20:25:33.306752",
      "exception": false,
-     "start_time": "2022-09-14T20:04:59.037769",
+     "start_time": "2022-09-14T20:22:35.346006",
      "status": "completed"
     },
     "tags": []
@@ -785,35 +785,49 @@
      "output_type": "stream",
      "text": [
       "[Training set] Accuracy: 1.0000, Precision: 1.0000, Recall: 1.0000, F1: 1.0000\n",
-      " [Testing set] Accuracy: 0.8649, Precision: 0.7645, Recall: 0.8477, F1: 0.7804\n",
+      " [Testing set] Accuracy: 0.8636, Precision: 0.7618, Recall: 0.8421, F1: 0.7726\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[Training set] Accuracy: 1.0000, Precision: 1.0000, Recall: 1.0000, F1: 1.0000\n",
-      " [Testing set] Accuracy: 0.8610, Precision: 0.7757, Recall: 0.8974, F1: 0.7820\n",
+      " [Testing set] Accuracy: 0.8636, Precision: 0.7799, Recall: 0.8451, F1: 0.7779\n",
       "[Training set] Accuracy: 1.0000, Precision: 1.0000, Recall: 1.0000, F1: 1.0000\n",
-      " [Testing set] Accuracy: 0.8571, Precision: 0.7862, Recall: 0.9083, F1: 0.8004\n",
+      " [Testing set] Accuracy: 0.8546, Precision: 0.7985, Recall: 0.9118, F1: 0.8162\n",
       "[Training set] Accuracy: 1.0000, Precision: 1.0000, Recall: 1.0000, F1: 1.0000\n",
-      " [Testing set] Accuracy: 0.8636, Precision: 0.7976, Recall: 0.9134, F1: 0.8111\n",
+      " [Testing set] Accuracy: 0.8597, Precision: 0.7825, Recall: 0.9129, F1: 0.7959\n",
       "[Training set] Accuracy: 1.0000, Precision: 1.0000, Recall: 1.0000, F1: 1.0000\n",
-      " [Testing set] Accuracy: 0.8507, Precision: 0.7864, Recall: 0.8972, F1: 0.8039\n",
+      " [Testing set] Accuracy: 0.8559, Precision: 0.7895, Recall: 0.9086, F1: 0.8109\n",
       "[Training set] Accuracy: 1.0000, Precision: 1.0000, Recall: 1.0000, F1: 1.0000\n",
-      " [Testing set] Accuracy: 0.8571, Precision: 0.7810, Recall: 0.9004, F1: 0.8008\n",
+      " [Testing set] Accuracy: 0.8443, Precision: 0.7462, Recall: 0.8933, F1: 0.7642\n",
       "[Training set] Accuracy: 1.0000, Precision: 1.0000, Recall: 1.0000, F1: 1.0000\n",
-      " [Testing set] Accuracy: 0.8507, Precision: 0.7707, Recall: 0.9135, F1: 0.7944\n",
+      " [Testing set] Accuracy: 0.8662, Precision: 0.7881, Recall: 0.9191, F1: 0.8111\n",
       "[Training set] Accuracy: 1.0000, Precision: 1.0000, Recall: 1.0000, F1: 1.0000\n",
-      " [Testing set] Accuracy: 0.8595, Precision: 0.7733, Recall: 0.9110, F1: 0.8022\n",
+      " [Testing set] Accuracy: 0.8698, Precision: 0.8106, Recall: 0.9151, F1: 0.8356\n",
       "[Training set] Accuracy: 1.0000, Precision: 1.0000, Recall: 1.0000, F1: 1.0000\n",
-      " [Testing set] Accuracy: 0.8776, Precision: 0.8307, Recall: 0.9122, F1: 0.8480\n",
+      " [Testing set] Accuracy: 0.8840, Precision: 0.8289, Recall: 0.9135, F1: 0.8413\n",
       "[Training set] Accuracy: 1.0000, Precision: 1.0000, Recall: 1.0000, F1: 1.0000\n",
-      " [Testing set] Accuracy: 0.8544, Precision: 0.7861, Recall: 0.8968, F1: 0.8042\n",
+      " [Testing set] Accuracy: 0.8479, Precision: 0.7629, Recall: 0.8979, F1: 0.7873\n",
       "Stdev:\n",
-      "\tAcc: 0.0079\n",
-      "\tPre: 0.0186\n",
-      "\tRec: 0.0196\n",
-      "\tF1: 0.0186\n",
+      "\tAcc: 0.0114\n",
+      "\tPre: 0.0244\n",
+      "\tRec: 0.0287\n",
+      "\tF1: 0.0262\n",
       "Mean Scores:\n",
-      "\tAcc: 0.8597\n",
-      "\tPre: 0.7852\n",
-      "\tRec: 0.8998\n",
-      "\tF1: 0.8027\n"
+      "\tAcc: 0.8610\n",
+      "\tPre: 0.7849\n",
+      "\tRec: 0.8959\n",
+      "\tF1: 0.8013\n"
      ]
     }
    ],
@@ -838,13 +852,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a17199cb",
+   "id": "71b2a4eb",
    "metadata": {
     "papermill": {
-     "duration": 0.004483,
-     "end_time": "2022-09-14T20:07:55.757196",
+     "duration": 0.004404,
+     "end_time": "2022-09-14T20:25:33.315882",
      "exception": false,
-     "start_time": "2022-09-14T20:07:55.752713",
+     "start_time": "2022-09-14T20:25:33.311478",
      "status": "completed"
     },
     "tags": []
@@ -873,14 +887,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 199.83874,
-   "end_time": "2022-09-14T20:07:56.485996",
+   "duration": 200.006829,
+   "end_time": "2022-09-14T20:25:34.045587",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-09-14T20:04:36.647256",
+   "start_time": "2022-09-14T20:22:14.038758",
    "version": "2.3.4"
   }
  },
